[project]
name = "debug-tools-tests"
version = "0.1.0"
description = "Tests for Debug Tools"
authors = [
    {name = "Nadun De Silva",email = "nadunrds@gmail.com"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.13.7"
dependencies = [
    "pytest (>=8.4.1,<9.0.0)",
    "docker (>=7.1.0,<8.0.0)",
    "mypy (>=1.17.1,<2.0.0)",
    "types-docker (>=7.1.0.20250809,<8.0.0.0)"
]


[build-system]
requires = ["poetry-core>=2.1.3,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ruff = "0.12.9"
